style: position mobile drawer absolutely below navbar to prevent icon overlapping

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -325,8 +325,8 @@
 
 /* Mobile Drawer */
 .mobile-nav-drawer {
-  position: fixed;
-  top: 77px;
+  position: absolute;
+  top: 100%;
   left: 0;
   width: 100%;
   max-height: 0;
@@ -339,7 +339,7 @@
 }
 
 .mobile-nav-drawer.open {
-  max-height: calc(100vh - 77px);
+  max-height: 85vh;
   overflow-y: auto;
   border-bottom: 1px solid var(--color-border);
 }
@@ -407,14 +407,6 @@
     width: 38px;
     height: 38px;
   }
-
-  .mobile-nav-drawer {
-    top: 63px;
-  }
-
-  .mobile-nav-drawer.open {
-    max-height: calc(100vh - 63px);
-  }
 }
 
 @media (max-width: 380px) {
@@ -429,14 +421,6 @@
   .icon-btn {
     width: 34px;
     height: 34px;
-  }
-
-  .mobile-nav-drawer {
-    top: 59px;
-  }
-
-  .mobile-nav-drawer.open {
-    max-height: calc(100vh - 59px);
   }
 }
 
